(Concolic) ConcolicExecutor settings passed through ExecutionManager
In Rose::BinaryAnalysis::Concolic:

* New header and source file for various concolic testing settings.

* Moved ConcolicExecutor::Settings to ConcolicExecutorSettings.

* ExecutionManager::instance takes a ConcolicExecutorSettings
  argument.

RPM-341

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -304,6 +304,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/Concolic/M68kSystem/BasicTypes.h				\
 	Rose/BinaryAnalysis/Concolic/M68kSystem/TracingExecutor.h			\
 	Rose/BinaryAnalysis/Concolic/M68kSystem/TracingResult.h				\
+	Rose/BinaryAnalysis/Concolic/Settings.h						\
 	Rose/BinaryAnalysis/Concolic/SharedMemory.h					\
 	Rose/BinaryAnalysis/Concolic/Specimen.h						\
 	Rose/BinaryAnalysis/Concolic/SystemCall.h					\
