(Jovial) Set STATIC modifier for ITEM declarations
- Previously only set for BLOCK and TABLE declarations

New test file: static_item.jov

GL-193

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -14,6 +14,7 @@ JOVIAL_TESTCODES = \
  item_desc_conversion.jov               \
  parens.jov                             \
  typename_conv.jov                      \
+ static_item.jov                        \
  status_enumval.jov                     \
  use_table_types.jov                    \
  1_2_2_non-nested-subroutine_a.jov      \
