(Documentation) Fixed documentation bugs
* The "src/Rose" component of header file names should not be
  stripped. Only the "src" component should be stripped. Header files
  under src/Rose are always included as <Rose/...>.

RPM-265

--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -145,7 +145,7 @@ STRIP_FROM_PATH        =
 # are normally passed to the compiler using the -I flag.
 
 STRIP_FROM_INC_PATH    = @top_pwd@/src/frontend/SageIII \
-                         @top_pwd@/src/Rose \
+                         @top_pwd@/src \
                          @top_srcdir@/src/frontend/SageIII \
                          @top_srcdir@/src/
 
