(ByteCode) Beta test checkin for P2::Engine refactoring
- Engine becomes the abstract base class for EngineBinary and EngineJvm.
- Engine was refactored into a factory with P2::Engine::forge(argc,argv,parser)
  used to create an instance of one of the derived classes, EngineBinary
  or EngineJvm. The forge class method returns an EnginePtr rather than
  Engine* so no explicit delete of an engine is required.
- The parser argument of forge is an inout (see Fortran keyword) variable.
  The returned command-line parser must parse the command-line arguments
  argc and argv, and then apply() the results to obtain a specimen from
  the command line. See ./tools/BinaryAnalysis/bat-ana.C for example usage.
- This change in parsing command line args was made so that tool settings could
  precede generic Engine settings inorder to obtain the concrete engine
  type from specimen file type (e.g., *.class for a JVM engine).
- The static function P2::Partitioner::instanceFromRbaFile(inputFileName,format)
  was added to reconstruct a partitioner from an rba file if only a
  partitioner is needed.

JVM-1
LDRD_SI-1

--- a/src/Rose/Makefile.am
+++ b/src/Rose/Makefile.am
@@ -176,6 +176,7 @@ librose_partial_la_SOURCES =								\
 	BinaryAnalysis/Partitioner2/DataBlock.C						\
 	BinaryAnalysis/Partitioner2/DataFlow.C						\
 	BinaryAnalysis/Partitioner2/Engine.C						\
+	BinaryAnalysis/Partitioner2/EngineBinary.C					\
 	BinaryAnalysis/Partitioner2/EngineJvm.C						\
 	BinaryAnalysis/Partitioner2/Exception.C						\
 	BinaryAnalysis/Partitioner2/Function.C						\
