(Support) Upgraded to latest Sawyer release
* Moved YAML support from ROSE to Sawyer but also left Rose::Yaml as
  an alias.

RPM-212

--- a/src/Rose/CMakeLists.txt
+++ b/src/Rose/CMakeLists.txt
@@ -22,8 +22,7 @@ add_library(roseNamespace OBJECT
   FormattedTable.C
   Initialize.C
   Progress.C
-  SourceLocation.C
-  Yaml.C)
+  SourceLocation.C)
 
 add_dependencies(roseNamespace rosetta_generated)
 
