(Rosebud) Experimental replacement for ROSETTA
This is an eventual modernized replacement for ROSETTA.

Some Features:

+ ROSE AST node type definitions are written in C++ (instead of an API
  and numerous auxiliary text files).

+ Modular backends to generate code (instead of one monolithic
  program).

+ A Rosebud IR that can be used by the backends or modified by
  analysis midends in a manner similar to the ROSE library (instead
  of an ad-hoc collection of undocumented classes).

+ A Rosebud IR with fully-automatic parent pointers so the tree is
  always in a consistent state (unlike ROSE's IR where it's so easy
  to screw up the child/parent relationship).

+ The Rosebud IR nodes are all reference counted and never need to be
  freed (unlike ROSE's IR where node ownership is undefined).

+ The Rosebud IR can be exported to YAML, allowing backends to be
  written in nearly any language, or they can be linked into Rosebud
  and use its IR (instead of ROSETTA where generators are quite
  tightly coupled).

+ Modern error and warning messages similar to LLVM that are in color,
  are a standard format understood by IDEs, and show the line of code
  and exact tokens associated with the message. Additional
  informational messages to describe more of the context when
  appropriate. (Instead of ROSETTA where input errors often result in
  hangs or core dumps that require debugging ROSETTA to figure out
  why the new node definition failed.)

+ Fast. Able to parse and check 12k lines of C++-like input and
  generate 65k lines of output across 700 files in 0.2 seconds (instead
  of ROSETTA that takes 10s of seconds to generate code).

RPM-357

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,10 +5,10 @@ pkgdata_DATA =
 MOSTLYCLEANFILES =
 
 if ROSE_USE_INTERNAL_FRONTEND_DEVELOPMENT
-SUBDIRS = util ROSETTA roseSupport Rose frontend midend backend \
+SUBDIRS = util Rosebud ROSETTA roseSupport Rose frontend midend backend \
           3rdPartyLibraries roseIndependentSupport
 else
-SUBDIRS = util ROSETTA roseSupport Rose frontend midend backend \
+SUBDIRS = util Rosebud ROSETTA roseSupport Rose frontend midend backend \
           3rdPartyLibraries roseIndependentSupport roseExtensions
 endif
 
