(Rosebud) Generated files; adjusted source code
* Generated binary analysis AST source files:

   + src/generated/*.C
       These are implementation files per node type.

   + src/ROSETTA/src/binaryInstruction.C
       This file is now generated, not human authored.

   + src/generated/{CMakeList.txt,Makefile.am,Tupfile}
       These build system files are auto generated.

* Modified various node-related things:

   + fixed bugs such as missing property initializations

   + added missing constructor arguments

   + removed CIL accessor implementations since they are now generated

   + moved C++ out of *.code files into *.C files. This was mostly
     for the SgAsmDwarf* types.

   + changed some `p_foo = x` to `set_foo(x)` to avoid long-standing
     bug where the p_isModified property was not being set.

* Modified the build systems

   + the build systems know to build new generated files

* Added documentation

   + src/generated/README describes the commands to generate files

   + src/AstNodes/README describes the Rosebud DSL used in these files

   + src/Rosebud/README describes the Rosebud API

RPM-357

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -98,6 +98,7 @@ add_subdirectory(roseIndependentSupport)
 add_definitions(-DROSE_DLL_EXPORTS)
 
 add_subdirectory(roseExtensions)
+add_subdirectory(generated)
 add_subdirectory(frontend)
 add_subdirectory(midend)
 add_subdirectory(backend)
@@ -162,6 +163,7 @@ set(rose_LIB_OBJS
   roseStringUtility
   RoseAST
   RoseCodeGen
+  roseGenerated
   mstl)
 
 set(rose_LIB_SRCS
