--- a/src/frontend/Disassemblers/Makefile.am
+++ b/src/frontend/Disassemblers/Makefile.am
@@ -15,7 +15,7 @@ libroseDisassemblers_la_SOURCES = SgAsmBlock.C SgAsmFunction.C					\
 	SgAsmExecutableFileFormat.C x86InstructionProperties.C					\
 	SgAsmInterpretation.C SgAsmIntegerValueExpression.C					\
 	SgAsmFloatValueExpression.C SgAsmExpression.C SgAsmType.C				\
-	Assembler.C AssemblerX86.C AssemblerX86Init.C			\
+	Assembler.C AssemblerX86.C AssemblerX86Init.C SgAsmOperandList.C			\
 	AssemblerX86Init1.C AssemblerX86Init2.C AssemblerX86Init3.C				\
 	AssemblerX86Init4.C AssemblerX86Init5.C AssemblerX86Init6.C				\
 	AssemblerX86Init7.C AssemblerX86Init8.C AssemblerX86Init9.C
