--- a/src/Rosebud/Makefile.am
+++ b/src/Rosebud/Makefile.am
@@ -16,8 +16,18 @@ rosebud_SOURCES =				\
 	RosettaGenerator.C			\
 	Utility.C				\
 	YamlGenerator.C
-
 rosebud_LDADD = $(top_builddir)/src/util/Sawyer/libroseSawyer.la $(ROSE_BOOST_LIBS) $(RT_LIBS)
+
+noinst_PROGRAMS = unitTest01
+unitTest01_SOURCES =				\
+	rosebud.C				\
+	Ast.C					\
+	BoostSerializer.C			\
+	Generator.C				\
+	RosettaGenerator.C			\
+	Utility.C				\
+	YamlGenerator.C
+unitTest01_LDADD = $(top_builddir)/src/util/Sawyer/libroseSawyer.la $(ROSE_BOOST_LIBS) $(RT_LIBS)
 
 # Headers are mentioned here so the policy checkers think they're used. There's no reason
 # to install them.
@@ -32,5 +42,4 @@ headers =					\
 	YamlGenerator.h
 
 other_files =					\
-	README					\
-	unitTest01.C
+	README
