(Rosebud) Added documentation and some new AST node functions.
RPM-357

--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -706,6 +706,7 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
 			 @top_srcdir@/src/Rose/AST \
 			 @top_srcdir@/src/Rose/Traits \
 			 @top_srcdir@/src/Rose/CodeGen \
+			 @top_srcdir@/src/Rosebud \
                          @top_srcdir@/src/ROSETTA/src/binaryInstruction.C \
                          @top_srcdir@/src/frontend/Disassemblers \
                          @top_srcdir@/src/frontend/BinaryFormats/Rva.C \
