(Build) Added Sawyer/Yaml.h to list of installed headers
RPM-212

--- a/src/util/Sawyer/Makefile.am
+++ b/src/util/Sawyer/Makefile.am
@@ -115,7 +115,8 @@ sawyerinclude_HEADERS =				\
 	Tree.h					\
 	Type.h					\
 	WarningsOff.h				\
-	WarningsRestore.h
+	WarningsRestore.h			\
+	Yaml.h
 
 EXTRA_DIST += CMakeLists.txt
 
