--- a/src/util/Sawyer/CMakeLists.txt
+++ b/src/util/Sawyer/CMakeLists.txt
@@ -11,5 +11,5 @@ install(FILES
   GraphIteratorSet.h GraphTraversal.h IndexedList.h Interval.h IntervalMap.h IntervalSet.h IntervalSetMap.h HashMap.h Lexer.h
   LineVector.h Map.h MappedBuffer.h Message.h NullBuffer.h Optional.h Parse.h PoolAllocator.h ProgressBar.h Sawyer.h Set.h SharedObject.h
   Result.h SharedPointer.h SmallObject.h Stack.h StackAllocator.h StaticBuffer.h Stopwatch.h Synchronization.h ThreadWorkers.h Time.h Trace.h
-  Tracker.h Tree.h Type.h WarningsOff.h WarningsRestore.h
+  Tracker.h Tree.h Type.h WarningsOff.h WarningsRestore.h Yaml.h
   DESTINATION include/Sawyer) # installed in $PREFIX/Sawyer, not $PREFIX/rose/Sawyer.
