(Jovial) Disallow DEFINE as part of a variable name
- DEFINE must now be preceded by whitespace (or start of a line)
- See gitlab-issue-206.cpl for example:

     DEF TABLE SOMETHING'DEFINE W 2 ; " COMMENT "

GL-206

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -366,6 +366,7 @@ COMPOOL_TESTCODES = \
  gitlab-issue-14.cpl                    \
  gitlab-issue-17.cpl                    \
  gitlab-issue-74.cpl                    \
+ gitlab-issue-206.cpl                   \
  beta.cpl                               \
  parttype.cpl                           \
  comments_start_term.cpl
