(Rosebud) First version of a non-ROSETTA backend
* This is the beginning of a Rosebud backend that does not generate
  ROSETTA input. It's purpose is to experiment with different ways
  of implementing tree data structures such as, but not limited to,
  ASTs.

RPM-357

--- a/src/Rosebud/CMakeLists.txt
+++ b/src/Rosebud/CMakeLists.txt
@@ -4,7 +4,9 @@ add_executable(rosebud
   rosebud.C
   Ast.C
   BoostSerializer.C
+  CxxGenerator.C
   Generator.C
+  RoseGenerator.C
   RosettaGenerator.C
   Utility.C
   YamlGenerator.C)
@@ -13,7 +15,9 @@ add_executable(unitTest01
   rosebud.C
   Ast.C
   BoostSerializer.C
+  CxxGenerator.C
   Generator.C
+  RoseGenerator.C
   RosettaGenerator.C
   Utility.C
   YamlGenerator.C)
