(Support) New tree data structures
RPM-374

--- a/src/Rose/CMakeLists.txt
+++ b/src/Rose/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(StringUtility)
 add_subdirectory(AST)
 add_subdirectory(CodeGen)
 add_subdirectory(Traits)
+add_subdirectory(Tree)
 
 # needed to properly define ROSE_UTIL_API
 add_definitions(-DROSE_UTIL_EXPORTS)
@@ -47,6 +48,7 @@ install(FILES
   RecursionCounter.h
   SourceLocation.h
   StringUtility.h
+  Tree.h
   Yaml.h
 
   DESTINATION ${INCLUDE_INSTALL_DIR}/Rose)
