--- a/src/Rose/Makefile.am
+++ b/src/Rose/Makefile.am
@@ -253,6 +253,10 @@ librose_partial_la_SOURCES =								\
 	StringUtility/NumberToString.C							\
 	StringUtility/Predicate.C							\
 	StringUtility/SplitJoin.C							\
-	StringUtility/StringToNumber.C
+	StringUtility/StringToNumber.C							\
+	Tree/Base.C									\
+	Tree/BasicTypes.C								\
+	Tree/Exception.C								\
+	Tree/List.C
 
 # Public header files are installed from parent makefiles.
