--- a/docs/Rose/rose.cfg.in
+++ b/docs/Rose/rose.cfg.in
@@ -687,6 +687,7 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
                          @top_srcdir@/src/frontend/frontend.docs \
                          @top_srcdir@/docs/testDoxygen \
 			 @top_srcdir@/src/Rose \
+			 @top_srcdir@/src/Rose/AST \
 			 @top_srcdir@/src/Rose/BinaryAnalysis \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/ByteCode \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Concolic \
@@ -701,11 +702,11 @@ INPUT                  = @top_srcdir@/docs/Rose/MainPage.dox \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/ModelChecker \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Partitioner2 \
 			 @top_srcdir@/src/Rose/BinaryAnalysis/Unparser \
+			 @top_srcdir@/src/Rose/CodeGen \
 			 @top_srcdir@/src/Rose/CommandLine \
 			 @top_srcdir@/src/Rose/StringUtility \
-			 @top_srcdir@/src/Rose/AST \
 			 @top_srcdir@/src/Rose/Traits \
-			 @top_srcdir@/src/Rose/CodeGen \
+			 @top_srcdir@/src/Rose/Tree \			 
 			 @top_srcdir@/src/Rosebud \
                          @top_srcdir@/src/ROSETTA/src/binaryInstruction.C \
                          @top_srcdir@/src/frontend/Disassemblers \
