(Support) Upgrade to latest Sawyer release
* One of the Sawyer header files was not installed.

RPM-212

--- a/src/util/Sawyer/Makefile.am
+++ b/src/util/Sawyer/Makefile.am
@@ -116,6 +116,7 @@ sawyerinclude_HEADERS =				\
 	Type.h					\
 	WarningsOff.h				\
 	WarningsRestore.h			\
+	WorkList.h				\
 	Yaml.h
 
 EXTRA_DIST += CMakeLists.txt
