(Build) Install missing header file for GNU make build system
RPM-378

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -282,6 +282,7 @@ nobase_pkginclude_HEADERS=								\
 	Rose/BinaryAnalysis/ConcreteLocation.h						\
 	Rose/BinaryAnalysis/Concolic/Architecture.h					\
 	Rose/BinaryAnalysis/Concolic/BasicTypes.h					\
+	Rose/BinaryAnalysis/Concolic/Callback.h						\
 	Rose/BinaryAnalysis/Concolic/Callback/BasicTypes.h				\
 	Rose/BinaryAnalysis/Concolic/Callback/MemoryExit.h				\
 	Rose/BinaryAnalysis/Concolic/Callback/MemoryInput.h				\
