--- a/src/Rose/AST/CMakeLists.txt
+++ b/src/Rose/AST/CMakeLists.txt
@@ -3,7 +3,8 @@ add_library(RoseAST OBJECT
   io/merge.C io/link.C io/delete.C io/share.C io/load.C
   checker/cmdline.C checker/checker.C
   checker/integrity_edges.C checker/integrity_declarations.C checker/integrity_symbols.C checker/integrity_types.C
-  utils/edge_ptr_repl.C)
+  utils/edge_ptr_repl.C
+  Utils.C)
 
 add_dependencies(RoseAST rosetta_generated)
 
