(Jovial) Frontend failure with multiple assigns
1. Fixed VariableList in grammar (by creating VariableLVal).
2. Updated ATerm traversal for VariableLVal .
3. Repaired SageTreeBuilder to create an SgExprListExp if variable list size > 1
   for lhs of SgAssignOp.

GL-207

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -237,6 +237,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-182.jov                   \
  gitlab-issue-186.jov                   \
  gitlab-issue-193.jov                   \
+ gitlab-issue-207.jov                   \
  gitlab-issue-208.jov                   \
  charlie.jov                            \
  shadow.jov                             \
