(Support) Moved Rose::Tree to Sawyer::Tree
* Since Rose::Tree is intended to be used by things before librose is
  built, such as code generators, it should be part of the src/util
  library. The most obvious place for it to live is in
  src/util/Sawyer.

RPM-393
RPM-212

--- a/src/Rose/Makefile.am
+++ b/src/Rose/Makefile.am
@@ -255,10 +255,6 @@ librose_partial_la_SOURCES =								\
 	StringUtility/NumberToString.C							\
 	StringUtility/Predicate.C							\
 	StringUtility/SplitJoin.C							\
-	StringUtility/StringToNumber.C							\
-	Tree/Base.C									\
-	Tree/BasicTypes.C								\
-	Tree/Exception.C								\
-	Tree/List.C
+	StringUtility/StringToNumber.C
 
 # Public header files are installed from parent makefiles.
