(Jovial) Const function used for item size
- Fixed by adding case of a variable having a symbol type of
  isSgTypedefSymbol(symbol) in traverse_Variable.

GL-220

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -240,6 +240,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-207.jov                   \
  gitlab-issue-208.jov                   \
  gitlab-issue-217.jov                   \
+ gitlab-issue-220.jov                   \
  charlie.jov                            \
  shadow.jov                             \
  comments.jov                           \
