(Rosebud) Code generators are chosen using factories; added new
* Added code generators that generate no code. The main backend
  NoneGenerator can be used when all you want is to check that the
  input is valid.  The NoneSerializer is used for nodes that don't
  yet support serialization because they have base classes that
  aren't Rosebud-generated and thus don't implement serialization.

* The main backend code generators ("rosetta", "rose", "yaml", and now
  "none") are selected from the command-line by name with no hard-coded
  values.

* The backend serialization generators ("boost" and now "none") are
  also selected by name with no hard-coded values.

* This is similar to how some of the binary analysis class hierarchies
  work, except here we use "lookup" instead of "forge" since we're not
  forging any new objects.

* These changes make it possible to later add user-defined code
  generators without needing to modify anything in Rosebud other than
  a call to register the generator.

* The "rosetta" backend checks whether a class is serializable.

RPM-357

--- a/src/Rosebud/Makefile.am
+++ b/src/Rosebud/Makefile.am
@@ -14,8 +14,11 @@ rosebud_SOURCES =				\
 	BoostSerializer.C			\
 	CxxGenerator.C				\
 	Generator.C				\
+	NoneGenerator.C				\
+	NoneSerializer.C			\
 	RoseGenerator.C				\
 	RosettaGenerator.C			\
+	Serializer.C				\
 	Utility.C				\
 	YamlGenerator.C
 rosebud_LDADD = $(top_builddir)/src/util/Sawyer/libroseSawyer.la $(ROSE_BOOST_LIBS) $(RT_LIBS)
@@ -28,6 +31,8 @@ headers =					\
 	BoostSerializer.h			\
 	CxxGenerator.h				\
 	Generator.h				\
+	NoneGenerator.h				\
+	NoneSerializer.h			\
 	RoseGenerator.h				\
 	RosettaGenerator.h			\
 	Serializer.h				\
