(Rosebud) Stub for eventual Jovial nodes
RPM-395

--- a/src/ROSETTA/src/CMakeLists.txt
+++ b/src/ROSETTA/src/CMakeLists.txt
@@ -37,7 +37,8 @@ set(CxxGrammarMetaProgram_SRCS
   buildStorageClasses.C
   buildConstructorsWithoutSourcePositionInformation.C
   outputClassesAndFields.C
-  StringUtility.C)
+  StringUtility.C
+  jovialNodes.C)
 
 # input files to generate source files
 set(GRAMMAR_SOURCE_FILES
