(Jovial) Overlay in procedure
- Simply fixed by adding case of SgJovialOverlayDeclaration in moveOneStatement (called
  by moveSymbolTableBetweenBlocks) in ::SageInterface.

GL-212

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -239,6 +239,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-193.jov                   \
  gitlab-issue-207.jov                   \
  gitlab-issue-208.jov                   \
+ gitlab-issue-212.jov                   \
  gitlab-issue-217.jov                   \
  gitlab-issue-220.jov                   \
  charlie.jov                            \
