--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -244,6 +244,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-219.jov                   \
  gitlab-issue-220.jov                   \
  gitlab-issue-225.jov                   \
+ gitlab-issue-226.jov                   \
  charlie.jov                            \
  shadow.jov                             \
  comments.jov                           \
