(Jovial) Fix status traversal
- Fixed in earlier commit, adding regression test gitlab-issue-222.jov

GL-222

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -243,6 +243,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-217.jov                   \
  gitlab-issue-219.jov                   \
  gitlab-issue-220.jov                   \
+ gitlab-issue-222.jov                   \
  gitlab-issue-225.jov                   \
  gitlab-issue-226.jov                   \
  charlie.jov                            \
