(Jovial) Add GOTO support
Implemented by:
 1. Using SgLabelStatement providing C++/C style labels
 2. Creating a map of labels to SgLabelStatements, which
    a. stores a placeholder label statement if label is encountered before statement is defined
    b. allows updating a placeholder label statement once the label statement is defined
 3. Label map is reset on entering and leaving a function definition (labels are visible within function scope)

Warning: untested behavior for nested functions

- regression test gitlab-issue-216.jov added
- it has multiple labels applied to one statement, thus testing ordering of label statement

GL-216

--- a/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
+++ b/tests/nonsmoke/functional/CompileTests/experimental_jovial_tests/Makefile.am
@@ -241,6 +241,7 @@ JOVIAL_TESTCODES = \
  gitlab-issue-208.jov                   \
  gitlab-issue-209.jov                   \
  gitlab-issue-212.jov                   \
+ gitlab-issue-216.jov                   \
  gitlab-issue-217.jov                   \
  gitlab-issue-219.jov                   \
  gitlab-issue-220.jov                   \
